# ios-logcat

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: codex-apply-v0.1.1-fixed.yml  codex-apply-v0.1.1.yml  codex-release-v0.1.1.yml  release.yml
profiles/: enable-private-logging.mobileconfig
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
