[package]
name = "ios-logcat"
version = "0.1.1"
description = "iOS device syslog viewer (Logcat-style)"
authors = ["you"]
edition = "2021"

[lib]
name = "ios_logcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
